--- a/index.html
+++ b/index.html
@@ -45,8 +45,38 @@
     </section>
     <section class="strandSection" id="strand">
         <div class="try">
+            <p class="strands">Strands Offered</p>
+            <div class="strand-container">
+                <div class="strand-box">
+                    <p class="strand-title">STEM</p>
+                        <p class="strand-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ratione quo sit cum. Inventore architecto, mollitia officia recusandae tempora nostrum eligendi! Exercitationem modi nemo veniam, odit dignissimos labore esse cum?</p>
+
+                </div>
+                <div class="strand-box">
+                      <p class="strand-title">ABM</p>
+                        <p class="strand-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ratione quo sit cum. Inventore architecto, mollitia officia recusandae tempora nostrum eligendi! Exercitationem modi nemo veniam, odit dignissimos labore esse cum?</p>
+
+                </div>
+                <div class="strand-box">
+                      <p class="strand-title">HUMSS</p>
+                        <p class="strand-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ratione quo sit cum. Inventore architecto, mollitia officia recusandae tempora nostrum eligendi! Exercitationem modi nemo veniam, odit dignissimos labore esse cum?</p>
+
+                </div>
+                <div class="strand-box">
+                      <p class="strand-title">TVL-HE</p>
+                        <p class="strand-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ratione quo sit cum. Inventore architecto, mollitia officia recusandae tempora nostrum eligendi! Exercitationem modi nemo veniam, odit dignissimos labore esse cum?</p>
+
+                </div>
+                <div class="strand-box">
+                      <p class="strand-title">TVL-ICT</p>
+                        <p class="strand-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ratione quo sit cum. Inventore architecto, mollitia officia recusandae tempora nostrum eligendi! Exercitationem modi nemo veniam, odit dignissimos labore esse cum?</p>
+
+                </div>
+                
+            </div>
 
         </div>
+            
 
     </section>
 
